# etl

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt  requirements.txt
.github/workflows/: validate_scripts.yml
backups/20260105_211723/: structure_manifest.json
config/: README.md  default_config.yaml  etl_workflows.yaml  extract_docs_config.yaml  ocr_config.yaml  upload_config.yaml
config/examples/: dagz_v01.yaml
data/analytics/ocr/test_v04/: latest
data/pipeline_metadata/: job_registry.json  migration_log.json
data/pipeline_metadata/job_registry_old/: 2026-01-02_00-33-11.json  2026-01-02_11-32-58.json  2026-01-02_16-13-33.json  2026-01-02_16-30-20.json  2026-01-03_12-35-38.json  2026-01-03_12-39-51.json  2026-01-03_12-40-16.json  2026-01-03_14-20-42.json  2026-01-03_15-22-30.json  2026-01-03_15-26-27.json  2026-01-03_15-34-01.json  2026-01-03_15-44-22.json  2026-01-03_16-20-15.json  2026-01-03_16-25-09.json  2026-01-03_16-42-27.json  2026-01-03_16-54-45.json  2026-01-03_17-17-06.json  2026-01-03_17-25-54.json
data/stage_1_ingest/metadata/job_metadata_archive/: 2026-01-02_00-33-11_pagination.json
data/stage_2_ocr/ocr_output/job_metadata/: 2026-01-02_00-33-11.json
data/stage_2_ocr/toc_consensus/job_metadata/: 2026-01-03_17-25-54.json
data/stage_2_ocr/toc_extraction/job_metadata/: 2026-01-03_12-35-38.json  2026-01-03_12-40-16.json  2026-01-03_14-20-42.json  2026-01-03_15-22-30.json  2026-01-03_15-26-27.json  2026-01-03_15-34-01.json  2026-01-03_15-44-22.json  2026-01-03_16-20-15.json  2026-01-03_16-25-09.json  (+2 more)
docs/: IMPLEMENTATION_COMPLETE.md  METADATA_API.md  MIGRATION_SUMMARY.md  OCR_PAGINATION_INFERENCE.md  PAGINATION_QUICK_REFERENCE.md  PAGINATION_RESULTS.md  PARSE_STRUCTURE_DELIVERY.md  PARSE_STRUCTURE_DESIGN.md  PARSE_STRUCTURE_QUICK_REFERENCE.md  STANDARDIZATION_COMPLETE.md  TEST_PIPELINE.md
notebooks/: README.md
notebooks/reference/: compare_toc_models.ipynb  job_tracking_guide.ipynb  pipeline_overview.ipynb  run_ocr_guide.ipynb  standardization_journey.ipynb  upload_pdfs_guide.ipynb
scripts/: README.md  compare_toc_models.py  etl_metadata.py  extract_toc_titles.py  parse_structure.py  patch_ocr_metadata.py  run_ocr.py  sync_ocr.py  upload_pdfs.py
scripts/maintenance/: migrate_folder_structure.py
src/etl/: __init__.py  config.py  utils.py
tests/: __init__.py  test_utils.py
(+42 files in other folders)
